--- a/css/style.css
+++ b/css/style.css
@@ -1,119 +1,156 @@
-/* Brendan Whitfield */
 
 /********************************* General Things ****************************************/
 
-h1
-{
-    font-size: 24pt;
-    text-align: center;
+html {
+    /* set everything to border-box */
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
-h2
-{
-    font-size: 14pt;
-    text-align: center;
+*, *:before, *:after {
+    -webkit-box-sizing: inherit;
+    -moz-box-sizing: inherit;
+    box-sizing: inherit;
 }
 
-.b
-{
-    font-weight:bold;
-    line-height: 1.1em;
-}
-
-.linkDisable
-{
-    opacity:0;
-    pointer-events: none;
-    cursor: default;
-    -webkit-user-select: none; /* Chrome/Safari */        
-    -moz-user-select: none; /* Firefox */
-    -ms-user-select: none; /* IE10+ */
-}
-
-.hide
-{
-    display:none;
-}
-
-.left {float:left;}
-.right {float:right;}
 
 body
 {
 	/* default behavior */
-	color:rgb(0,0,0);
+	background: #111;
+	color:#888;
 	font-family: "Arial", sans-serif;
-	font-size:12pt;
+	font-size:10pt;
+}
+
+aside
+{
+	padding:0px 20px;
+	background: #222;
+	position: absolute;
+	top:0px;
+	left:0px;
+	width:300px;
+	min-height: 100%;
+}
+
+aside > *
+{
+	padding-top:15px;
+}
+
+
+aside h1
+{
+	color:white;
+	font-size: 14pt;
+	/*text-align: center;*/
+	text-transform: uppercase;
+	padding:30px 0px;
+}
+
+
+aside h2
+{
+	color:white;
+	font-weight: bold;
+	text-transform: uppercase;
+}
+
+aside table th
+{
+	text-align: left;
+}
+
+
+
+
+
+
+.linkDisable
+{
+	opacity:0;
+	pointer-events: none;
+	cursor: default;
+	-webkit-user-select: none; /* Chrome/Safari */
+	-moz-user-select: none; /* Firefox */
+	-ms-user-select: none; /* IE10+ */
+}
+
+.hide
+{
+	display:none;
 }
 
 section
 {
-    margin-top:24px;
-    text-align: center;
+	margin-top:24px;
+	text-align: center;
 }
 
 section > div
 {
-    display:inline-block;
-    vertical-align:top;
-    overflow:hidden;
-    margin-left:20px;
-    margin-right:20px;
-    margin-top:0px;
+	display:inline-block;
+	vertical-align:top;
+	overflow:hidden;
+	margin-left:20px;
+	margin-right:20px;
+	margin-top:0px;
 }
 
 section > div:first-of-type
 {
-    margin-left:0px;
+	margin-left:0px;
 }
 
 section > div:last-of-type
 {
-    margin-right:0px;
+	margin-right:0px;
 }
 
 section.dark
 {
-    border:1px solid rgb(200,200,200);
-    background-color: rgb(245,245,245);
-    border-left:none;
-    border-right:none;
+	border:1px solid rgb(200,200,200);
+	background-color: rgb(245,245,245);
+	border-left:none;
+	border-right:none;
 }
 
 /* ====================================== header =======================================*/
 
 #header
 {
-    font-size: 10pt;
+	font-size: 10pt;
 }
 
 #settings
 {
-    display:inline-block;
-    text-align: left;
-    width:300px;
-    padding:10px;
-    line-height: 48px;
+	display:inline-block;
+	text-align: left;
+	width:300px;
+	padding:10px;
+	line-height: 48px;
 }
 
 #instructions
 {
-    display:inline-block;
-    text-align: left;
-    width:380px;
-    padding:10px;
+	display:inline-block;
+	text-align: left;
+	width:380px;
+	padding:10px;
 }
 
 #run
 {
-    height:26px;
-    width:100%;
+	height:26px;
+	width:100%;
 }
 
 .checkbox
 {
-    padding:0px;
-    margin: 0px 10px 0px 0px;
+	padding:0px;
+	margin: 0px 10px 0px 0px;
 }
 
 
@@ -121,162 +158,162 @@ section.dark
 
 #main > div > ul
 {
-    border:1px solid rgb(200,200,200);
-    display:block;
-    padding:10px;
-    margin-top:10px;
-    overflow: hidden;
+	border:1px solid rgb(200,200,200);
+	display:block;
+	padding:10px;
+	margin-top:10px;
+	overflow: hidden;
 }
 
 #main > div > ul > li
 {
-    border-top:1px solid rgb(200,200,200);
-    margin-top:5px;
-    padding-top:5px;
+	border-top:1px solid rgb(200,200,200);
+	margin-top:5px;
+	padding-top:5px;
 }
 #main > div > ul > li:first-of-type
 {
-    border-top:none;
-    margin-top:0px;
-    padding-top:0px;
+	border-top:none;
+	margin-top:0px;
+	padding-top:0px;
 }
 
 input.length, input.quantity
 {
-    font-family: "Arial", sans-serif;
-    font-size:10pt;
-    width:4em;
+	font-family: "Arial", sans-serif;
+	font-size:10pt;
+	width:4em;
 }
 
 .colorCode
 {
 	background-color: hsl(0, 100%, 50%);
-    display:inline-block;
-    position:relative;
-    width:50px;
-    height:17px;
-    bottom:-3px;
+	display:inline-block;
+	position:relative;
+	width:50px;
+	height:17px;
+	bottom:-3px;
 }
 
 .spacer
 {
-    display:inline-block;
-    margin-left:20px;
+	display:inline-block;
+	margin-left:20px;
 }
 
 a.button
 {
-    color:black;
-    text-decoration: none;
-    border:1px solid rgb(200,200,200);
-    background-color: rgb(235,235,235);
-    padding:2px;
+	color:black;
+	text-decoration: none;
+	border:1px solid rgb(200,200,200);
+	background-color: rgb(235,235,235);
+	padding:2px;
 }
 
 a.button:hover
 {
-    color:blue;
-    border-color:blue;
+	color:blue;
+	border-color:blue;
 }
 
 a.add
 {
-    position: relative;
-    top:7px;
+	position: relative;
+	top:7px;
 }
 
 li.add
 {
-    text-align: center;
-    height:22px;
+	text-align: center;
+	height:22px;
 }
 
 /* ====================================== error =======================================*/
 
 #error
 {
-    border:1px solid rgb(200,72,72);
-    border-left:none;
-    border-right:none;
-    background-color: rgb(245,171,171);
+	border:1px solid rgb(200,72,72);
+	border-left:none;
+	border-right:none;
+	background-color: rgb(245,171,171);
 }
 
 #error h2
 {
-    display:inline-block;
-    height:40px;
-    line-height: 40px;
-    width:766px;
+	display:inline-block;
+	height:40px;
+	line-height: 40px;
+	width:766px;
 }
 
 /* ====================================== done ======================================= */
 
 #done
 {
-    border:1px solid rgb(72,200,72);
-    border-left:none;
-    border-right:none;
-    background-color: rgb(171,245,171);
+	border:1px solid rgb(72,200,72);
+	border-left:none;
+	border-right:none;
+	background-color: rgb(171,245,171);
 }
 
 #done h2
 {
-    display:inline-block;
-    height:40px;
-    line-height: 40px;
-    width:766px;
+	display:inline-block;
+	height:40px;
+	line-height: 40px;
+	width:766px;
 }
 
 /* ====================================== results ======================================= */
 
 section.result
 {
-    margin-top:12px;
+	margin-top:12px;
 }
 
 section.result h1
 {
-    display:inline-block;
-    height:50px;
-    line-height: 50px;
-    width:100px;
+	display:inline-block;
+	height:50px;
+	line-height: 50px;
+	width:100px;
 }
 
 section.result canvas
 {
-    display:inline-block;
+	display:inline-block;
 }
 
 /* ====================================== printer ======================================= */
 
 @media print
 {
-    section
-    {
-        border:none !important;
-        background-color: transparent !important;
-    }
+	section
+	{
+		border:none !important;
+		background-color: transparent !important;
+	}
 
-    section:not(.result)
-    {
-        display:none !important;
-    }
+	section:not(.result)
+	{
+		display:none !important;
+	}
 
-    section.result
-    {
-        width:766px; /* ensures that there is enough room to put everything on a single line */
-    }
+	section.result
+	{
+		width:766px; /* ensures that there is enough room to put everything on a single line */
+	}
 
-    section.result h1
-    {
-        font-size: 20pt;
-        display:inline;
-        width:auto;
-        padding-right:10px;
-    }
+	section.result h1
+	{
+		font-size: 20pt;
+		display:inline;
+		width:auto;
+		padding-right:10px;
+	}
 
-    section.result canvas
-    {
-        display:inline;
-    }
+	section.result canvas
+	{
+		display:inline;
+	}
 }
