--- a/css/style.css
+++ b/css/style.css
@@ -41,13 +41,18 @@ aside > *
 }
 
 
+aside h1,
+aside h2
+{
+	padding-top:30px;
+}
+
+
 aside h1
 {
 	color:white;
 	font-size: 14pt;
-	/*text-align: center;*/
 	text-transform: uppercase;
-	padding:30px 0px;
 }
 
 
@@ -56,12 +61,54 @@ aside h2
 	color:white;
 	font-weight: bold;
 	text-transform: uppercase;
+	padding-bottom:15px;
+}
+
+aside h2 button
+{
+	float:right;
+	width:40px;
+	height:15px;
+	line-height:10px;
 }
 
 aside table th
 {
 	text-align: left;
 }
+
+aside table tr td
+{
+	padding:6px 2px 0px 2px;
+}
+
+aside table tbody tr:first-of-type button
+{
+	display: none; /* hide the first delete button */
+}
+
+
+aside table tr th:first-of-type,
+aside table tr td:first-of-type { padding-left:0px; }
+aside table tr th:last-of-type,
+aside table tr td:last-of-type { padding-right:0px; }
+
+aside table input,
+aside table select
+{
+	width:100%;
+}
+
+
+
+
+
+
+
+
+
+
+
 
 
 
