--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,11 @@ body
 	font-size:10pt;
 }
 
+
+/*
+ * Aside
+ */
+
 aside
 {
 	padding:0px 20px;
@@ -103,213 +108,33 @@ aside table select
 
 
 
+/*
+ * Output
+ */
 
-
-
-
-
-
-
-
-
-
-
-
-.linkDisable
+#output
 {
-	opacity:0;
-	pointer-events: none;
-	cursor: default;
-	-webkit-user-select: none; /* Chrome/Safari */
-	-moz-user-select: none; /* Firefox */
-	-ms-user-select: none; /* IE10+ */
-}
-
-.hide
-{
-	display:none;
-}
-
-section
-{
-	margin-top:24px;
+	padding-left:300px;
+	padding-top:30px;
 	text-align: center;
 }
 
-section > div
-{
-	display:inline-block;
-	vertical-align:top;
-	overflow:hidden;
-	margin-left:20px;
-	margin-right:20px;
-	margin-top:0px;
-}
-
-section > div:first-of-type
-{
-	margin-left:0px;
-}
-
-section > div:last-of-type
-{
-	margin-right:0px;
-}
-
-section.dark
-{
-	border:1px solid rgb(200,200,200);
-	background-color: rgb(245,245,245);
-	border-left:none;
-	border-right:none;
-}
-
-/* ====================================== header =======================================*/
-
-#header
-{
-	font-size: 10pt;
-}
-
-#settings
-{
-	display:inline-block;
-	text-align: left;
-	width:300px;
-	padding:10px;
-	line-height: 48px;
-}
-
-#instructions
-{
-	display:inline-block;
-	text-align: left;
-	width:380px;
-	padding:10px;
-}
-
-#run
-{
-	height:26px;
-	width:100%;
-}
-
-.checkbox
-{
-	padding:0px;
-	margin: 0px 10px 0px 0px;
-}
 
 
-/* ====================================== lists =======================================*/
 
-#main > div > ul
-{
-	border:1px solid rgb(200,200,200);
-	display:block;
-	padding:10px;
-	margin-top:10px;
-	overflow: hidden;
-}
 
-#main > div > ul > li
-{
-	border-top:1px solid rgb(200,200,200);
-	margin-top:5px;
-	padding-top:5px;
-}
-#main > div > ul > li:first-of-type
-{
-	border-top:none;
-	margin-top:0px;
-	padding-top:0px;
-}
 
-input.length, input.quantity
-{
-	font-family: "Arial", sans-serif;
-	font-size:10pt;
-	width:4em;
-}
 
-.colorCode
-{
-	background-color: hsl(0, 100%, 50%);
-	display:inline-block;
-	position:relative;
-	width:50px;
-	height:17px;
-	bottom:-3px;
-}
 
-.spacer
-{
-	display:inline-block;
-	margin-left:20px;
-}
 
-a.button
-{
-	color:black;
-	text-decoration: none;
-	border:1px solid rgb(200,200,200);
-	background-color: rgb(235,235,235);
-	padding:2px;
-}
 
-a.button:hover
-{
-	color:blue;
-	border-color:blue;
-}
 
-a.add
-{
-	position: relative;
-	top:7px;
-}
 
-li.add
-{
-	text-align: center;
-	height:22px;
-}
 
-/* ====================================== error =======================================*/
 
-#error
-{
-	border:1px solid rgb(200,72,72);
-	border-left:none;
-	border-right:none;
-	background-color: rgb(245,171,171);
-}
 
-#error h2
-{
-	display:inline-block;
-	height:40px;
-	line-height: 40px;
-	width:766px;
-}
 
-/* ====================================== done ======================================= */
 
-#done
-{
-	border:1px solid rgb(72,200,72);
-	border-left:none;
-	border-right:none;
-	background-color: rgb(171,245,171);
-}
-
-#done h2
-{
-	display:inline-block;
-	height:40px;
-	line-height: 40px;
-	width:766px;
-}
 
 /* ====================================== results ======================================= */
 
