--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ body
 
 aside
 {
-	padding:0px 20px;
+	padding:20px;
 	background: #222;
 	position: absolute;
 	top:0px;
@@ -42,16 +42,8 @@ aside
 
 aside > *
 {
-	padding-top:15px;
+	margin-bottom:15px;
 }
-
-
-aside h1,
-aside h2
-{
-	padding-top:30px;
-}
-
 
 aside h1
 {
@@ -60,13 +52,12 @@ aside h1
 	text-transform: uppercase;
 }
 
-
 aside h2
 {
+	margin-top:45px;
 	color:white;
 	font-weight: bold;
 	text-transform: uppercase;
-	padding-bottom:15px;
 }
 
 aside h2 button
@@ -82,9 +73,9 @@ aside table th
 	text-align: left;
 }
 
-aside table tr td
+aside table td
 {
-	padding:6px 2px 0px 2px;
+	padding:3px;
 }
 
 aside table tbody tr:first-of-type button
@@ -109,6 +100,11 @@ aside table#settings th
 	padding-right:10px;
 }
 
+aside button#run
+{
+	width:100%;
+	height:30px;
+}
 
 
 /*
@@ -117,14 +113,9 @@ aside table#settings th
 
 #main
 {
+	padding:30px;
 	padding-left:300px;
 	text-align: center;
-}
-
-header
-{
-	border-bottom:1px solid #444;
-	padding:20px;
 }
 
 #errors
