--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,7 @@ aside
 	left:0px;
 	width:300px;
 	min-height: 100%;
+	text-align: left;
 }
 
 aside > *
@@ -68,14 +69,10 @@ aside h2 button
 	line-height:10px;
 }
 
+aside table td,
 aside table th
 {
-	text-align: left;
-}
-
-aside table td
-{
-	padding:3px;
+	padding:3px 1px;
 }
 
 aside table tbody tr:first-of-type button
@@ -95,15 +92,14 @@ aside table select
 	width:100%;
 }
 
-aside table#settings th
+aside table#settings tbody tr td
 {
-	padding-right:10px;
+	width:33%;
 }
 
-aside button#run
+aside table#settings tbody tr td > *
 {
 	width:100%;
-	height:30px;
 }
 
 
