--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,13 @@ body
 	font-size:10pt;
 }
 
+h1
+{
+	color:white;
+	font-size: 14pt;
+	text-transform: uppercase;
+}
+
 
 /*
  * Aside
@@ -41,21 +48,10 @@ aside
 	text-align: left;
 }
 
-aside > *
-{
-	margin-bottom:15px;
-}
-
-aside h1
-{
-	color:white;
-	font-size: 14pt;
-	text-transform: uppercase;
-}
-
 aside h2
 {
 	margin-top:45px;
+	margin-bottom:15px;
 	color:white;
 	font-weight: bold;
 	text-transform: uppercase;
@@ -92,12 +88,13 @@ aside table select
 	width:100%;
 }
 
-aside table#settings tbody tr td
+
+aside table#settings th
 {
-	width:33%;
+	padding-left:10px;
 }
 
-aside table#settings tbody tr td > *
+aside button#run
 {
 	width:100%;
 }
@@ -116,7 +113,6 @@ aside table#settings tbody tr td > *
 
 #errors
 {
-	padding:30px;
 	color:rgb(255, 30, 30);
 }
 
@@ -139,6 +135,31 @@ ul#output li h1
 }
 
 
+/*
+ * Welcome message
+ */
+
+#welcome
+{
+	display:table;
+	width:100%;
+	height:100%;
+}
+
+#welcome .box
+{
+	display:table-cell;
+	vertical-align: middle;
+	text-align: left;
+	margin-left:auto;
+	margin-right:auto;
+	width:300px;
+}
+
+#welcome .box > *
+{
+	margin-bottom: 1em;
+}
 
 
 /* ====================================== printer ======================================= */
