--- a/css/style.css
+++ b/css/style.css
@@ -32,13 +32,32 @@ h1
 }
 
 
+
+/*
+ * Run
+ */
+
+button#run
+{
+	border:none;
+	cursor: pointer;
+	width:300px;
+	height:50px;
+	background-color: #2B87FF;
+}
+
+button#run:hover
+{
+	background-color: #249CFF;
+}
+
+
 /*
  * Aside
  */
 
 aside
 {
-	padding:20px;
 	background: #222;
 	position: absolute;
 	top:0px;
@@ -48,6 +67,11 @@ aside
 	text-align: left;
 }
 
+aside > section
+{
+	padding:40px 20px;
+}
+
 aside h2
 {
 	margin-top:45px;
@@ -55,6 +79,11 @@ aside h2
 	color:white;
 	font-weight: bold;
 	text-transform: uppercase;
+}
+
+aside h2:first-of-type
+{
+	margin-top: 0px;
 }
 
 aside h2 button
@@ -92,11 +121,6 @@ aside table select
 aside table#settings th
 {
 	padding-left:10px;
-}
-
-aside button#run
-{
-	width:100%;
 }
 
 
