--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,9 @@
 
 /********************************* General Things ****************************************/
 
+html,
+body { height:100%; }
+
 html {
     /* set everything to border-box */
     -webkit-box-sizing: border-box;
@@ -62,7 +65,6 @@ button#run
 	width:100%;
 	height:50px;
 	background-color: #2B87FF;
-	color:black;
 }
 
 button#run:hover
@@ -174,6 +176,7 @@ aside table tbody tr:first-of-type button.delete
 
 #main
 {
+	height:100%;
 	padding:30px;
 	padding-left:300px;
 	text-align: center;
@@ -209,15 +212,18 @@ ul#output li h1
 
 #welcome
 {
-	display:table;
 	width:100%;
 	height:100%;
 }
 
 #welcome .box
 {
-	display:table-cell;
-	vertical-align: middle;
+	position: relative;
+	top: 50%;
+	-webkit-transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
+	transform: translateY(-50%);
+
 	text-align: left;
 	margin-left:auto;
 	margin-right:auto;
