--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,7 @@ h1
 {
 	color:white;
 	font-size: 14pt;
+	font-weight: bold;
 	text-transform: uppercase;
 }
 
@@ -171,7 +172,7 @@ aside table tbody tr:first-of-type button.delete
 
 
 /*
- * Output
+ * Main display area
  */
 
 #main
@@ -182,10 +183,20 @@ aside table tbody tr:first-of-type button.delete
 	text-align: center;
 }
 
+
+/*
+ * Errors
+ */
+
 #errors
 {
 	color:rgb(255, 30, 30);
 }
+
+
+/*
+ * Output
+ */
 
 ul#output li
 {
@@ -212,12 +223,7 @@ ul#output li h1
 
 #welcome
 {
-	width:100%;
-	height:100%;
-}
-
-#welcome .box
-{
+	/* vertical centering */
 	position: relative;
 	top: 50%;
 	-webkit-transform: translateY(-50%);
@@ -230,7 +236,7 @@ ul#output li h1
 	width:300px;
 }
 
-#welcome .box > *
+#welcome > *
 {
 	margin-bottom: 1em;
 }
