--- a/index.mustache
+++ b/index.mustache
@@ -91,6 +91,9 @@
 		<div id="main">
 			<ul id="output"></ul>
 			<section id="errors"></section>
+			<section id="print">
+				<button>Print</button>
+			</section>
 			<section id="welcome">
 				<h1>Lumber Segmenter</h1>
 				<p>
