--- a/index.mustache
+++ b/index.mustache
@@ -67,7 +67,7 @@
 					</tbody>
 				</table>
 
-				<h2>Cuts<button id="add-cut" class="add">+</button></h2>
+				<h2>Cut Sizes<button id="add-cut" class="add">+</button></h2>
 
 				<table id="cuts">
 					<thead>
