reinstated mode switching in prep for new suboptimal solver

--- a/index.mustache
+++ b/index.mustache
@@ -35,10 +35,8 @@
 						<tr>
 							<td>
 								<select id="mode">
-									<option value="auto" selected="selected">Auto</option>
-									<option value="solve">Optimal (Slow)</option>
-									<option value="fast_1">Suboptimal 1</option>
-									<option value="fast_2">Suboptimal 2</option>
+									<option value="optimal" selected="selected">Optimal</option>
+									<option value="suboptimal">Suboptimal (fast)</option>
 								</select>
 							</td>
 							<th>Mode</th>
