--- a/index.mustache
+++ b/index.mustache
@@ -89,10 +89,9 @@
 		<div id="main">
 			<ul id="output"></ul>
 			<section id="errors"></section>
-			<section id="print">
-				<button>Print</button>
-			</section>
-			<section id="welcome">
+			<section id="progress" class="center"><div class="bar"></div></section>
+			<section id="print"><button>Print</button></section>
+			<section id="welcome" class="center">
 				<h1>Lumber Segmenter</h1>
 				<p>
 					Calculates cuts of lumber that minimize loss. Enter the length and quantity for your source lumber, and your desired cuts, and a cut pattern will be generated.
